--- a/src/index.html
+++ b/src/index.html
@@ -45,5 +45,8 @@
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
+  <!-- ZingChart cdn -->
+  <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+
 </body>
 </html>
