Added ZingChart with basic charts

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,8 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-
+  <!-- ZingChart cdn -->
+  <script src="./assets/libs/zingchart.min.js"></script>
 </head>
 <body>
 
@@ -44,9 +45,6 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
-  <!-- ZingChart cdn -->
-  <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
 
 </body>
 </html>
